Fix header alignment issues

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -18,7 +18,6 @@ $space-search-right: 10%;
 
   &__container {
     background-color: $page-header-color;
-    padding: $space-sm $space-none;
   }
 
   &__container_branding_off {
@@ -74,18 +73,8 @@ $space-search-right: 10%;
 }
 
 .page-secondary-nav-header-background {
-  margin-top: $space-md;
-  &::before {
-    content: '';
-    position: absolute;
-    background-color: $brand-white;
-    z-index: -1;
-    height: 48px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-  }
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+  background-color: $brand-white;
 }
 
 .page-logo {
