--- a/src/sass/components/_intro-modal.scss
+++ b/src/sass/components/_intro-modal.scss
@@ -299,6 +299,12 @@ $slick-dot-character: '\2022' !default;
     filter: brightness(90%) contrast(90%);
   }
 
+  &__square-details {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+
   &__square-following {
     filter: brightness(60%);
   }
